added auth code

--- a/amplify-demos/package.json
+++ b/amplify-demos/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "aws-amplify": "^1.0.8",
+    "aws-amplify-react": "^2.0.0",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
     "react-scripts": "1.1.5"
